--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
   "scripts": {
     "test": "jest --config jestconfig.json",
     "build": "npx tsc",
-    "start": "node dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+    "buildDebugByTsup": "tsup index.ts --sourcemap --watch",
+    "buildByTsup": "tsup index.ts --minify",
+    "start": "NODE_ENV=production node dist/index.js",
+    "start:express:debug": "DEBUG=* NODE_ENV=development nodemon --watch '**/*.ts' --exec 'ts-node' index.ts",
+    "dev": "nodemon --watch '**/*.ts' --exec 'ts-node' index.ts",
+    "devByTsup": "tsup index.ts --sourcemap --watch --onSuccess \"NODE_ENV=development node -r dotenv/config --inspect dist/index.js dotenv_config_path=.env.test\""
   },
   "keywords": [],
   "author": "DatDao",
   "license": "ISC",
   "dependencies": {
+    "debug": "^4.3.4",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jest": "^28.1.3"
@@ -24,6 +29,7 @@
     "concurrently": "^7.3.0",
     "nodemon": "^2.0.19",
     "ts-jest": "^28.0.8",
+    "tsup": "^6.2.2",
     "typescript": "^4.7.4"
   }
 }
