--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
   "author": "DatDao",
   "license": "ISC",
   "dependencies": {
+    "@mongodb-helpers/health-check": "^0.1.1",
     "debug": "^4.3.4",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongodb": "^4.9.1",
+    "nodejs-health-checker": "^1.6.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
